--- a/WebApp/myapp/package.json
+++ b/WebApp/myapp/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd-mobile": "^2.3.4",
+    "axios": "^0.21.4",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-sticky": "^6.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
