--- a/WebApp/myapp/package.json
+++ b/WebApp/myapp/package.json
@@ -10,12 +10,12 @@
     "axios": "^0.21.4",
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
+    "rc-form": "^2.4.12",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-sticky": "^6.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
